# gpr200-fa2024-joshua-scalia

assignments/assignment1_helloTriangle/: main.cpp
assignments/assignment1_helloTriangle/HelloTriangle-Assignment1-GPR200/: CMakeLists.txt
assignments/assignment1_helloTriangle/HelloTriangle-Assignment1-GPR200/HelloTriangle-Assignment1-GPR200/: CMakeLists.txt  HelloTriangle-Assignment1-GPR200.cpp  HelloTriangle-Assignment1-GPR200.h
assignments/assignment_2/: main.cpp
assignments/assignment_2/assets/: backFragShader.frag  fragmentShader.frag
assignments/assignment_4/: CMakeLists.txt  main.cpp
assignments/assignment_4/assets/: backVertShader.vert  vertexShader.vert
assignments/assignment_5/: CMakeLists.txt  main.cpp
assignments/assignment_5/assets/: backVertShader.vert  fragmentShader.frag  lightFragShader.frag  lightVertShader.vert
core/: CMakeLists.txt
core/josh/: shader.cpp  shader.h  texture.h
